--- a/src/ui/playbacksettingspage.ui
+++ b/src/ui/playbacksettingspage.ui
@@ -297,14 +297,38 @@
       <item row="0" column="1">
        <widget class="QComboBox" name="gst_output"/>
       </item>
-      <item row="1" column="0">
+      <item row="1" column="0" colspan="2">
+       <widget class="QCheckBox" name="alsa_exclusive">
+        <property name="text">
+         <string>Use ALSA hardware device (exclusive, no Pulse/PipeWire)</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="alsa_device_label">
+        <property name="text">
+         <string>ALSA device (e.g., hw:1,0)</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QComboBox" name="alsa_device_combo">
+        <property name="toolTip">
+         <string></string>
+        </property>
+        <property name="sizeAdjustPolicy">
+         <enum>QComboBox::AdjustToContents</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
        <widget class="QLabel" name="buffer_duration_label">
         <property name="text">
          <string>Buffer duration</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="3" column="1">
        <widget class="QSpinBox" name="buffer_duration">
         <property name="suffix">
          <string> ms</string>
@@ -317,14 +341,14 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
+      <item row="4" column="0">
        <widget class="QLabel" name="buffer_min_fill_label">
         <property name="text">
          <string>Minimum buffer fill</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="4" column="1">
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
          <widget class="QLabel" name="buffer_min_fill_value_label">
@@ -354,14 +378,14 @@
         </item>
        </layout>
       </item>
-      <item row="3" column="0">
+      <item row="5" column="0">
        <widget class="QLabel" name="sample_rate_label">
         <property name="text">
          <string>Sample rate</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
+      <item row="5" column="1">
        <layout class="QHBoxLayout" name="sample_rate_layout">
         <item>
          <widget class="QComboBox" name="sample_rate">
@@ -425,14 +449,14 @@
         </item>
        </layout>
       </item>
-      <item row="4" column="0">
+      <item row="6" column="0">
        <widget class="QLabel" name="output_format_label">
         <property name="text">
          <string>Format</string>
         </property>
        </widget>
       </item>
-      <item row="5" column="0" colspan="2">
+      <item row="7" column="0" colspan="2">
        <widget class="QCheckBox" name="mono_playback">
         <property name="toolTip">
          <string>Changing mono playback preference will be effective for the next playing songs</string>
@@ -442,7 +466,7 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="1">
+      <item row="6" column="1">
        <layout class="QHBoxLayout" name="output_format_layout">
         <item>
          <widget class="QComboBox" name="output_format">
